--- a/res/layout/wrt_mode.xml
+++ b/res/layout/wrt_mode.xml
@@ -19,8 +19,7 @@
         android:layout_toRightOf="@+id/imageView"
         android:gravity="center"
         android:text="@string/irremote_dialog_learning_sig_desc_closer_txt"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:contentDescription="" />
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -29,6 +28,5 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/img_learning"
-        android:contentDescription="" />
+        android:background="@drawable/img_learning" />
 </RelativeLayout>
