--- a/res/layout-xlarge/wrt_mode.xml
+++ b/res/layout-xlarge/wrt_mode.xml
@@ -17,7 +17,6 @@
         android:layout_alignTop="@+id/imageView"
         android:layout_gravity="right"
         android:layout_toRightOf="@+id/imageView"
-        android:contentDescription=""
         android:gravity="center"
         android:text="@string/irremote_dialog_learning_sig_desc_closer_txt"
         android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -29,6 +28,5 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/img_learning2"
-        android:contentDescription="" />
+        android:background="@drawable/img_learning2" />
 </RelativeLayout>
