--- a/res/layout/activity_ir.xml
+++ b/res/layout/activity_ir.xml
@@ -82,7 +82,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_below="@+id/spinner">
+        android:layout_below="@+id/spinner"
+        android:visibility="visible">
 
         <Button
             android:id="@+id/button2"
