--- a/res/layout-xlarge/activity_ir.xml
+++ b/res/layout-xlarge/activity_ir.xml
@@ -3,7 +3,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/main_btn">
 
     <Spinner
         android:id="@+id/spinner"
@@ -15,15 +16,74 @@
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/button" />
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:longClickable="false"
+        android:onClick="onPowerClick"
+        android:text="@string/power_btn"
+        android:textSize="25dp" />
+
+
+    <RelativeLayout
+        android:id="@+id/dvdL"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="invisible"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/spinner">
+        <Button
+            android:id="@+id/button29"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/wb"
+            android:textSize="20dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <Button
+            android:id="@+id/button30"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/p"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/button31"
+            android:onClick="onPauseClick" />
+
+        <Button
+            android:id="@+id/button31"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/pl"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/button29"
+            android:onClick="onPlayClick" />
+
+        <Button
+            android:id="@+id/button32"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/wf"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/button30" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/tvL"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         android:layout_below="@+id/spinner"
         android:visibility="visible">
-
 
         <Button
             android:id="@+id/button2"
@@ -184,11 +244,11 @@
             android:id="@+id/button16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/button14"
-            android:layout_toRightOf="@+id/button13"
             android:onClick="on0Click"
             android:text="@string/zero"
-            android:textSize="15dp" />
+            android:textSize="15dp"
+            android:layout_below="@+id/button14"
+            android:layout_toRightOf="@+id/button13" />
 
         <Button
             android:id="@+id/button17"
@@ -355,16 +415,23 @@
 
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/button"
+    <RadioButton
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
+        android:layout_height="wrap_content"
+        android:id="@+id/radioButton"
+        android:enabled="true"
+        android:checked="true"
         android:layout_alignParentTop="true"
-        android:longClickable="false"
-        android:onClick="onPowerClick"
-        android:text="@string/power_btn"
-        android:textSize="25dp" />
+        android:layout_toLeftOf="@+id/radioButton2" />
+
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/radioButton2"
+        android:clickable="false"
+        android:enabled="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
